--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    <body>
       <div class="wrapper">
          <header>
-            <nav>
+            <div class="container">
                <div class="menu-icon">
                   <i class="fa fa-bars fa-2x"></i>
                </div>
@@ -186,7 +186,7 @@ end of slider section-->
                  <div class="row">
                      <div class="col-md-12">
                          <div class="feature_header">
-                             <h2>DEADSPRINT]]]</h2>
+                             <h2>DEADSPRIN</h2>
                          </div>
                      </div>
                  </div>
