--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    <body>
       <div class="wrapper">
          <header>
-            <div class="container">
+            <div >
                <div class="menu-icon">
                   <i class="fa fa-bars fa-2x"></i>
                </div>
@@ -63,7 +63,7 @@
 
                   </ul>
                </div>
-            </nav>
+            </div>
 
          </header>
          <!--Start of Video (using #slider section)-->
