--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    </head>
    <body>
       <div class="wrapper">
-         <header>
+         <div>
             <div >
                <div class="menu-icon">
                   <i class="fa fa-bars fa-2x"></i>
@@ -53,8 +53,8 @@
                <div class="logo">
                 <a href="#" class="navbar-left"><img src="redtitlesmall.png"></a>
                </div>
-               <div class="menu">
-                  <ul>
+               <div class="nav">
+                  <ul class="nav">
                      <li><a href="index.html">Home</a></li>
                      <li><a href="about.html">About</a></li>
                      <li><a href="blog.html">Blog</a></li>
@@ -65,7 +65,7 @@
                </div>
             </div>
 
-         </header>
+         </div>
          <!--Start of Video (using #slider section)-->
          <section id="slider">
              <div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
