--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ end of slider section-->
                  <div class="row">
                      <div class="col-md-12">
                          <div class="feature_header">
-                             <h2>DEADSPRIN</h2>
+                             <h2>DEADSPRINttt</h2>
                          </div>
                      </div>
                  </div>
